Исправлены замечания Check and Build application