@@ -2,9 +2,13 @@ package ru.yandex.practicum.filmorate.controller;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
+import ru.yandex.practicum.filmorate.dto.FilmDto;
+import ru.yandex.practicum.filmorate.dto.GenreDto;
+import ru.yandex.practicum.filmorate.dto.MpaDto;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.service.FilmService;
 import org.springframework.jdbc.core.JdbcTemplate;
+
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -17,23 +21,23 @@ public class FilmController {
     private final JdbcTemplate jdbcTemplate;
 
     @GetMapping
-    public List<Map<String, Object>> findAll() {
-        return filmService.findAll().stream().map(this::toMap).toList();
+    public List<FilmDto> findAll() {
+        return filmService.findAll().stream().map(this::toDto).collect(Collectors.toList());
     }
 
     @GetMapping("/{id}")
-    public Map<String, Object> findById(@PathVariable Long id) {
-        return toMap(filmService.findById(id));
+    public FilmDto findById(@PathVariable Long id) {
+        return toDto(filmService.findById(id));
     }
 
     @PostMapping
-    public Map<String, Object> create(@RequestBody Film film) {
-        return toMap(filmService.create(film));
+    public FilmDto create(@RequestBody Film film) {
+        return toDto(filmService.create(film));
     }
 
     @PutMapping
-    public Map<String, Object> update(@RequestBody Film film) {
-        return toMap(filmService.update(film));
+    public FilmDto update(@RequestBody Film film) {
+        return toDto(filmService.update(film));
     }
 
     @PutMapping("/{id}/like/{userId}")
@@ -47,41 +51,40 @@ public class FilmController {
     }
 
     @GetMapping("/popular")
-    public List<Map<String, Object>> getPopular(@RequestParam(defaultValue = "10") int count) {
+    public List<FilmDto> getPopular(@RequestParam(defaultValue = "10") int count) {
         if (count <= 0) {
             throw new IllegalArgumentException("count должен быть больше 0");
         }
-        return filmService.getPopular(count).stream().map(this::toMap).toList();
+        return filmService.getPopular(count).stream().map(this::toDto).collect(Collectors.toList());
     }
 
-    private Map<String, Object> toMap(Film film) {
-        Map<String, Object> filmMap = new HashMap<>();
-        filmMap.put("id", film.getId());
-        filmMap.put("name", film.getName());
-        filmMap.put("description", film.getDescription());
-        filmMap.put("releaseDate", film.getReleaseDate());
-        filmMap.put("duration", film.getDuration());
-        filmMap.put("likes", film.getLikes());
-
-        // mpa
-        Map<String, Object> mpa = jdbcTemplate.queryForMap(
+    private FilmDto toDto(Film film) {
+        MpaDto mpa = jdbcTemplate.queryForObject(
                 "SELECT id AS id, name AS name FROM mpa WHERE id = ?",
+                (rs, rowNum) -> new MpaDto(rs.getInt("id"), rs.getString("name")),
                 film.getMpaId()
         );
-        filmMap.put("mpa", mpa);
 
-        // genres
-        List<Map<String, Object>> genres = new ArrayList<>();
+        Set<GenreDto> genres = new HashSet<>();
         if (film.getGenreIds() != null && !film.getGenreIds().isEmpty()) {
             String ids = film.getGenreIds().stream()
                     .map(String::valueOf)
                     .collect(Collectors.joining(","));
-            genres = jdbcTemplate.queryForList(
-                    "SELECT id AS id, name AS name FROM genre WHERE id IN (" + ids + ")"
-            );
+            genres = new HashSet<>(jdbcTemplate.query(
+                    "SELECT id AS id, name AS name FROM genre WHERE id IN (" + ids + ")",
+                    (rs, rowNum) -> new GenreDto(rs.getInt("id"), rs.getString("name"))
+            ));
         }
-        filmMap.put("genres", genres);
 
-        return filmMap;
+        FilmDto dto = new FilmDto();
+        dto.setId(film.getId());
+        dto.setName(film.getName());
+        dto.setDescription(film.getDescription());
+        dto.setReleaseDate(film.getReleaseDate());
+        dto.setDuration(film.getDuration());
+        dto.setLikes(film.getLikes());
+        dto.setMpa(mpa);
+        dto.setGenres(genres);
+        return dto;
     }
 }
